# tokens-contract-test

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  test.sh
src/: contract.rs  internal.rs  lib.rs
