[package]
name = "tokens-contract-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"
bitflags = "1.3.2"
primitive-types = {version = "0.12.1", default-features = false}

[lib]
crate-type = ["cdylib"]
